fixed text alignment

--- a/smosh-fanpage/styles.css
+++ b/smosh-fanpage/styles.css
@@ -668,7 +668,7 @@ body#home main{
 .grid-item #tntlTitle{
   text-align: center; 
   margin-top: -20%; 
-  margin-left: -10%; 
+  margin-left: -30%; 
 }
 
 .grid-item #tntlPara{
@@ -693,12 +693,12 @@ body#home main{
 .grid-item #BeoTitle{
   text-align: center; 
   margin-top: 5%; 
- margin-left: -10%; 
+ margin-left: -25%; 
 }
 
 .grid-item #beoPara{
  text-align: center;
-  margin-left: -20%;
+  margin-left: -25%;
   margin-right: 10%; 
 }
 
